ho risolto il problema degli warning TimerTask per i test sull'UI, ho impostato la strategia per la persistence unit a update al posto di create-drop per il modulo sessionBuilder-core