@@ -119,6 +119,24 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.5.2</version>
+					<configuration>
+						<argLine>
+							--add-opens java.base/java.util=ALL-UNNAMED
+							--add-opens java.base/java.lang=ALL-UNNAMED
+							--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+							--add-opens java.desktop/java.awt=ALL-UNNAMED
+							--add-opens java.desktop/java.awt.event=ALL-UNNAMED
+							--add-opens java.desktop/javax.swing=ALL-UNNAMED
+						</argLine>
+						<systemPropertyVariables>
+							<java.awt.headless>false</java.awt.headless>
+						</systemPropertyVariables>
+					</configuration>
+				</plugin>
+				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>${jacoco.version}</version>
@@ -212,8 +230,17 @@
 						</execution>
 					</executions>
 					<configuration>
+					   	<argLine>
+					   		--add-opens java.base/java.util=ALL-UNNAMED 
+					   		--add-opens java.base/java.lang=ALL-UNNAMED 
+					   		--add-opens java.base/java.lang.reflect=ALL-UNNAMED 
+					   		--add-opens java.desktop/java.awt=ALL-UNNAMED 
+					   		--add-opens java.desktop/java.awt.event=ALL-UNNAMED 
+					   		--add-opens java.desktop/javax.swing=ALL-UNNAMED
+				   		</argLine>
 						<systemPropertyVariables>
 							<postgres.mapped.port>${postgres.mapped.port}</postgres.mapped.port>
+							<java.awt.headless>false</java.awt.headless>
 						</systemPropertyVariables>
 					</configuration>
 				</plugin>
